update tsoa swagger and routes
