# src/swagger.json
@@ -83,29 +83,35 @@
 				"type": "object",
 				"description": "Construct a type with a set of properties K of type T"
 			},
+			"CountryFlagMap": {
+				"$ref": "#/components/schemas/Record_CountryId.CountryDetailRow-at-flag_"
+			},
 			"Record_GamesId.GamesDetailRow-at-emblem_": {
 				"properties": {},
 				"type": "object",
 				"description": "Construct a type with a set of properties K of type T"
 			},
-			"Record_SportId.SportDetailRow-at-logo_": {
+			"GamesEmblemMap": {
+				"$ref": "#/components/schemas/Record_GamesId.GamesDetailRow-at-emblem_"
+			},
+			"Record_SportId.SportDetailRow-at-icon_": {
 				"properties": {},
 				"type": "object",
 				"description": "Construct a type with a set of properties K of type T"
 			},
-			"Record_CountryId.Exclude_MedalTotalsRow.CountryId__": {
+			"SportsIconMap": {
+				"$ref": "#/components/schemas/Record_SportId.SportDetailRow-at-icon_"
+			},
+			"Record_CountryId.MedalColumn_": {
 				"properties": {},
 				"type": "object",
 				"description": "Construct a type with a set of properties K of type T"
+			},
+			"CountryMedalsMap": {
+				"$ref": "#/components/schemas/Record_CountryId.MedalColumn_"
 			},
 			"MedalTotalsRow": {
 				"properties": {
-					"country": {
-						"$ref": "#/components/schemas/CountryId"
-					},
-					"season": {
-						"type": "string"
-					},
 					"gold": {
 						"type": "number",
 						"format": "double"
@@ -121,23 +127,24 @@
 					"total": {
 						"type": "number",
 						"format": "double"
+					},
+					"country": {
+						"$ref": "#/components/schemas/CountryId"
+					},
+					"season": {
+						"type": "string"
 					}
 				},
 				"required": [
-					"country",
-					"season",
 					"gold",
 					"silver",
 					"bronze",
-					"total"
+					"total",
+					"country",
+					"season"
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"Record_CountryId.Pick_CountryMedalRow.gold-or-silver-or-bronze-or-total__": {
-				"properties": {},
-				"type": "object",
-				"description": "Construct a type with a set of properties K of type T"
 			},
 			"SportId": {
 				"type": "string"
@@ -340,7 +347,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Record_CountryId.CountryDetailRow-at-flag_"
+									"$ref": "#/components/schemas/CountryFlagMap"
 								}
 							}
 						}
@@ -359,7 +366,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Record_GamesId.GamesDetailRow-at-emblem_"
+									"$ref": "#/components/schemas/GamesEmblemMap"
 								}
 							}
 						}
@@ -378,7 +385,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Record_SportId.SportDetailRow-at-logo_"
+									"$ref": "#/components/schemas/SportsIconMap"
 								}
 							}
 						}
@@ -397,7 +404,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Record_CountryId.Exclude_MedalTotalsRow.CountryId__"
+									"$ref": "#/components/schemas/CountryMedalsMap"
 								}
 							}
 						}
@@ -449,7 +456,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Record_CountryId.Pick_CountryMedalRow.gold-or-silver-or-bronze-or-total__"
+									"$ref": "#/components/schemas/CountryMedalsMap"
 								}
 							}
 						}
